--- a/index.html
+++ b/index.html
@@ -121,38 +121,41 @@
             </div> -->
       
 
-        <form action="#" method="POST">
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="text" placeholder="Full Name" required>
-                    <span class="focus"></span>
-                </div>
-                <div class="input-field">
-                    <input type="text" placeholder="Email Address" required>
-                    <span class="focus"></span>
-                </div>
-            </div>
+       <form name="contact" method="POST" data-netlify="true">
+    <input type="hidden" name="form-name" value="contact">
 
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="number" placeholder="Mobile Number">
-                    <span class="focus"></span>
-                </div>
-                <div class="input-field">
-                    <input type="text" placeholder="Email Subject" required>
-                    <span class="focus"></span>
-                </div>
-            </div>
+    <div class="input-box">
+        <div class="input-field">
+            <input type="text" name="name" placeholder="Full Name" required>
+            <span class="focus"></span>
+        </div>
+        <div class="input-field">
+            <input type="email" name="email" placeholder="Email Address" required>
+            <span class="focus"></span>
+        </div>
+    </div>
 
-            <div class="textarea-field">
-                <textarea cols="30" rows="10" placeholder="Your Message" required></textarea>
-                <span class="focus"></span>
-            </div>
+    <div class="input-box">
+        <div class="input-field">
+            <input type="number" name="mobile" placeholder="Mobile Number" required>
+            <span class="focus"></span>
+        </div>
+        <div class="input-field">
+            <input type="text" name="subject" placeholder="Email Subject" required>
+            <span class="focus"></span>
+        </div>
+    </div>
 
-            <div class="btn-box btns">
-                <button type="submit" class="btn">Send Message</button>
-            </div>
-        </form>
+    <div class="textarea-field">
+        <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
+        <span class="focus"></span>
+    </div>
+
+    <div class="btn-box btns">
+        <button type="submit" class="btn">Send Message</button>
+    </div>
+</form>
+
     </section>
 
     <!-- Footer -->
