improved submission handling

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                 <a href="https://github.com/yashjhade-19" target="_blank">github.com/yashjhade-19</a>
             </div> -->
       
-
-       <form name="contact" method="POST" data-netlify="true">
+<form name="contact" method="POST" data-netlify="true">
     <input type="hidden" name="form-name" value="contact">
+    <input type="hidden" name="redirect" value="/">
 
     <div class="input-box">
         <div class="input-field">
@@ -155,6 +155,8 @@
         <button type="submit" class="btn">Send Message</button>
     </div>
 </form>
+
+
 
     </section>
 
