Update footer and about section with visitor counter and project improvements

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
         </div>
 
         <div class="about-content">
-            <h3>Java & Web Developer!</h3>
-            <p>I'm a passionate developer currently pursuing Computer Science. I specialize in building web applications using Java technologies (Servlets, JSP) and modern frontend frameworks. My goal is to create efficient, scalable solutions that solve real-world problems.</p>
+            <h3>Aspiring Software Developer!</h3>
+            <p> I'm a passionate Computer Science undergraduate with a deep interest in backend development and modern web technologies. 
+			I specialize in building RESTful applications using Java, Spring Boot, and databases like MongoDB and MySQL.</p>
             
-            <p>I have experience in building web applications using Java Servlets, JSP, and frontend technologies. I love solving problems and continuously improving my coding skills.</p>
+            <p> I’ve developed secure backend systems with JWT and Google OAuth, created dynamic web apps using JSP and Servlets, and explored cloud-based deployment on platforms like Railway. I enjoy solving real-world problems through code and constantly growing my skills in software engineering.</p>
 
             <div class="btn-box btns">
                 <a href="#projects" class="btn">View Projects</a>
@@ -81,9 +82,9 @@
 
         <div class="project-box" style="background-image: url('project2.png'); background-size:cover; background-position:center;">
             <div class="project-layer">
-                <h4>Snake Game</h4>
-                <p>GUI-based application using Java Swing and AWT</p>
-                <a href="https://github.com/yashjhade-19/Snake-Game" target="_blank">
+                <h4>Journal Application </h4>
+                <p>Spring Boot RESTful API platform with JWT auth, Google OAuth & MongoDB</p>
+                <a href="https://github.com/yashjhade-19/Journal-Application" target="_blank">
                     <i class='bx bx-link-external'></i>
                 </a>
             </div>
@@ -162,13 +163,17 @@
 
     <!-- Footer -->
     <footer class="footer">
+	
         <div class="footer-text">
             <p>Copyright &copy; <span id="year"></span> by Yash Jhade | All Rights Reserved.</p>
+			 <span id="visitor-count">Loading visitors...</span>
+
         </div>
 
         <div class="footer-iconTop">
             <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
         </div>
+		
     </footer>
 
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -184,6 +189,12 @@
     cursorChar: "|",
     smartBackspace: true
   });
+  
+    fetch('https://api.countapi.xyz/hit/yashjhade.netlify.app/visits')
+    .then(res => res.json())
+    .then(res => {
+      document.getElementById('visitor-count').innerText = `Visitors: ${res.value}`;
+    });
 </script>
 
 	</body>
