Add live link for existing project and introduce new Fitness Application project

--- a/index.html
+++ b/index.html
@@ -112,9 +112,17 @@
                                 rel="noopener noreferrer" class="project-link">
                                 <i class="bx bxl-github"></i> View Code
                             </a>
+                            <a href="https://yashjhade-journal-app.netlify.app/" target="_blank" rel="noopener noreferrer"
+                                class="project-link live-link">
+                                <i class="bx bx-link-external"></i> Live
+                            </a>
+
+
                         </div>
                     </div>
                 </article>
+
+
 
                 <!-- Project 2 -->
 
@@ -138,6 +146,29 @@
                         </div>
                     </div>
                 </article>
+
+                <!-- Project 6 -->
+                <article class="project-card">
+                    <div class="project-content">
+                        <h3 class="project-title">Fitness Application</h3>
+                        <div class="project-tags">
+                            <span class="tag">Spring Boot</span>
+                            <span class="tag">Microservices</span>
+                            <span class="tag">React</span>
+                            <span class="tag">Kafka</span>
+                            <span class="tag">Keycloak</span>
+                        </div>
+                        <p class="project-description">AI-powered fitness platform built with Spring Boot microservices
+                            and React.</p>
+                        <div class="project-links">
+                            <a href="https://github.com/yashjhade-19/Fitness-Application" target="_blank"
+                                rel="noopener noreferrer" class="project-link">
+                                <i class="bx bxl-github"></i> View Code
+                            </a>
+                        </div>
+                    </div>
+                </article>
+
 
 
 
